hw2 been modified

--- a/hw2-project/index.html
+++ b/hw2-project/index.html
@@ -1,27 +1,9 @@
 <html>
 <head>
-
-    <title>Behind Enemy Lines</title>
-
-    <style>
-    #selection-box {
-        background-color: rgba(255, 255, 0, 0.15);
-        border: 1px solid #e0e000;
-        display: none;
-        pointer-events: none;
-        position: absolute;
-    }
-
-    #selection-box.active {
-        display: inline-block;
-    }
-    </style>
+    <title>Follow the Leader</title>
     <script src="./js/phaser.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 </head>
-
 <body>
-    <div id="selection-box"></div>
-    <!-- <script type="text/javascript" src="./js/main.js"></script> -->
-    <script type="text/javascript" src="./js/selection.js"></script>
 </body>
 </html>
