hw3 file structure modified

--- a/hw3-project/index.html
+++ b/hw3-project/index.html
@@ -4,7 +4,7 @@
 
     <script src="./js/phaser.js"></script>
     <script type="text/javascript" src="http://76.28.150.193:8888/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="./js/selection.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 </head>
 
 <body>
