game description added

--- a/hw3-project/index.html
+++ b/hw3-project/index.html
@@ -8,5 +8,9 @@
 </head>
 
 <body>
+    <h4 align="center">
+        Press <font color="red">S</font> to save current state,
+        Press <font color="blue">L</font> to load state from database
+    </h4>
 </body>
 </html>
